@@ -437,6 +437,7 @@ PHP_FUNCTION(stream_copy_to_stream)
 	php_stream *src, *dest;
 	zval *zsrc, *zdest;
 	long maxlen = PHP_STREAM_COPY_ALL, pos = 0;
+	size_t ret;
 
 	if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "rr|ll", &zsrc, &zdest, &maxlen, &pos) == FAILURE) {
 		RETURN_FALSE;
@@ -450,7 +451,12 @@ PHP_FUNCTION(stream_copy_to_stream)
 		RETURN_FALSE;
 	}
 
-	RETURN_LONG(php_stream_copy_to_stream(src, dest, maxlen));
+	ret = php_stream_copy_to_stream_ex(src, dest, maxlen);
+
+	if (ret == PHP_STREAM_FAILURE) {
+		RETURN_FALSE;
+	}
+	RETURN_LONG(ret);
 }
 /* }}} */
 
